# kakistocrat

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  TODO  base.db  blacklist  bst.cc  bst.h  buf_list.h  capnp_server.cc  capnp_server.h  channel.cc  channel.h  config.cc  config.h  config.json  crawl.cc  crawl.h  crawl_main.cc  crawl_util.cc  crawl_util.h  crawler.cc  crawler.h  crawler_capnp.cc  curl_kj.cc  curl_kj.h  fixed_memory_pool.h  hash.cc  hash.h  hash_table.cc  hash_table.h  index.cc  index.h  index_backing.cc  index_info.cc  index_manager.cc  index_manager.h  index_part.cc  (+54 more)
cmake/: FindSQLite3.cmake
html/: index.html
templates/: search.html
x_cocomel/: bst.c  bst.h  dynamic_array_64.h  dynamic_array_8.h  dynamic_array_kv_32.h  dynamic_array_kv_64.h  hash_table.c  hash_table.h  search.c  str.h  tokenizer.h
